testsuite/tests/grammar/invalid_lkt/two_grammar_files.lkt
import basic
from lexer_example import foo_lexer

@with_lexer(foo_lexer) grammar second_grammar {
    @main_rule main_rule <- Example("example")
}
